--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.4",
+    "@angular/cdk": "^19.2.8",
     "@angular/common": "^19.1.4",
     "@angular/compiler": "^19.1.4",
     "@angular/core": "^19.1.4",
@@ -38,9 +39,11 @@
     "apexcharts": "^3.35.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "david-ui-angular": "^1.1.0",
     "ng-apexcharts": "^1.7.1",
     "ngx-sonner": "^2.0.2",
     "rxjs": "~7.4.0",
+    "sass": "^1.86.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
