--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^19.1.4",
     "@angular/platform-browser-dynamic": "^19.1.4",
     "@angular/router": "^19.1.4",
+    "@auth0/angular-jwt": "^5.2.0",
     "@ng-icons/core": "^31.2.0",
     "@ng-icons/lucide": "^31.2.0",
     "@ng-icons/radix-icons": "^31.2.0",
@@ -35,6 +36,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/angular-query-experimental": "^5.76.0",
     "angular-svg-icon": "^13.0.0",
     "apexcharts": "^3.35.3",
     "class-variance-authority": "^0.7.1",
